--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.2",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "release-it"
@@ -15,9 +16,16 @@
   },
   "release-it": {
     "git": {
+      "changelog": "git log --pretty=format:\\\"* %s (%h)\\\" ${from}...${to}",
+      "commit": true,
+      "tag": true,
+      "tagAnnotation": "Release ${version}",
       "commitMessage": "chore: release v${version}"
     },
     "github": {
+      "release": true
+    },
+    "gitlab": {
       "release": true
     }
   }
